name:                qqParse
version:             0.1.0.0
synopsis:            haskell parser with open recursion
description:         An incomplete parser producing a Language.Haskell.TH.Syntax syntax tree.
                     Written with open recursion, so that it is possible to override parts of the
                     grammar without touching QQParse.hs
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     QQParse, UULayout
  other-extensions:    FlexibleContexts, RankNTypes
  build-depends:       base >=4.7 && <4.8,
                       data-default-class >=0.0 && <0.1,
                       split >=0.2 && <0.3,
                       hspec >=2.1 && <2.2,
                       template-haskell >=2.9 && <2.10,
                       uu-parsinglib >=2.8 && <2.9,
                       QuickCheck >=2.7 && <2.8
  default-language:    Haskell2010
